Изменена геометрия грейбокса

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2C5D6A90485058290A9457978BAC0942
-ProjectName=Third Person BP Game Template
+ProjectName=NoxArcanum
 
 [StartupActions]
 bAddPacks=True
