--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=NoxArcanumUnderwater
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Levels/Greybox.Greybox
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+GameDefaultMap=/Game/Levels/Greybox.Greybox
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -128,7 +128,7 @@ r.Mobile.AllowDistanceFieldShadows=True
 r.Mobile.AllowMovableDirectionalLights=True
 r.MobileNumDynamicPointLights=4
 r.MobileDynamicPointLightsUseStaticBranch=True
-r.Mobile.EnableMovableSpotlights=False
+r.Mobile.EnableMovableSpotlights=True
 r.GPUSkin.Support16BitBoneIndex=False
 r.GPUSkin.Limit2BoneInfluences=False
 r.SupportDepthOnlyIndexBuffers=True
